if (TARGET_WEBOS)
    add_subdirectory(ndlaud)
    if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
        add_subdirectory(ndlaud-webos5)
    endif()
    add_subdirectory(alsa)
    add_subdirectory(pulse)
endif()

if(TARGET_LINUX)
    add_subdirectory(alsa)
    add_subdirectory(pulse)
endif()
add_subdirectory(sdlaud)