target_sources(moonlight-lib PRIVATE app.c app_launch.c app_error.c app_session.c)
target_include_directories(moonlight-lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(input)
add_subdirectory(stream)
add_subdirectory(platform)
add_subdirectory(util)
add_subdirectory(backend)
add_subdirectory(ui)
add_subdirectory(lvgl)
add_subdirectory(res)